--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@auth0/angular-jwt": "^5.1.0",
     "@types/jquery": "^3.5.5",
     "bootstrap": "^5.0.2",
     "crypto-js": "^4.1.1",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
